--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         stage('Hello World') {
             steps {
                 script {
-                    def message = 'Hello, World!'
+                    def message = 'Hello, World'
                     echo message
                 }
             }
